# dusk-plonk

./: .gitignore  Cargo.toml  README.md
benches/: plonk.rs
docs/: zero_knowledge.md
src/: bit_iterator.rs  circuit.rs  commitment_scheme.rs  lib.rs  permutation.rs  prelude.rs  proof_system.rs  util.rs
src/commitment_scheme/: kzg10.rs
src/commitment_scheme/kzg10/: commitment.rs  key.rs  proof.rs  srs.rs
src/constraint_system/: composer.rs  helper.rs  logic.rs  range.rs
src/constraint_system/ecc/curve_addition/: fixed_base_gate.rs  variable_base_gate.rs
src/constraint_system/ecc/scalar_mul/: fixed_base.rs
src/fft/: domain.rs  evaluations.rs  polynomial.rs
src/plonkup/: multiset.rs
src/plonkup/table/: lookup_table.rs
src/proof_system/: linearisation_poly.rs  preprocess.rs  proof.rs  prover.rs  quotient_poly.rs  verifier.rs  widget.rs
src/proof_system/widget/: logic.rs  lookup.rs
src/proof_system/widget/arithmetic/: verifierkey.rs
src/proof_system/widget/ecc/curve_addition/: verifierkey.rs
src/proof_system/widget/ecc/scalar_mul/fixed_base/: verifierkey.rs
src/proof_system/widget/logic/: verifierkey.rs
src/proof_system/widget/lookup/: verifierkey.rs
src/proof_system/widget/permutation/: verifierkey.rs
src/proof_system/widget/range/: verifierkey.rs
tests/: circuit.rs
