[package]
name = "parity-plonk"
version = "0.1.0"
categories =["algorithms", "cryptography", "science"]
edition = "2018"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]

[dependencies]
merlin = {version = "3.0", default-features = false}
rand_core = {version="0.6", default-features=false}
dusk-bytes = "0.1"
dusk-bls12_381 = {version = "0.1", default-features = false, package="plonk-bls12_381", path = "../dusk-bls12_381"}
dusk-jubjub = {version = "0.1", default-features = false, package="plonk-jubjub", path = "../jubjub"}
itertools = {version = "0.9", default-features = false}
hashbrown = {version = "0.9", default-features=false, features = ["ahash"]}
cfg-if = "1.0"
# Dusk related deps for WASMI serde
canonical = {version = "0.6", optional = true}
canonical_derive = {version = "0.6", optional = true}
# Parity support
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
sp-std = { default-features = false, version = '3.0.0' }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[[bench]]
name = "plonk"
harness = false

[features]
default = ["std"]
std = [
    "rand_core/std",
    "itertools/default",
    "hashbrown/default"
]
trace = []
trace-print = ["trace"]
canon = ["dusk-jubjub/canon"]

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
