[package]
name = "dusk-plonk"
version = "0.9.0"
categories = ["algorithms", "cryptography", "science"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
  "**/.gitignore",
  ".gitignore",
  "Cargo.lock",
  "**/examples",
  "benchmarks/",
  ".github/",
]

[dependencies]
merlin = { version = "3.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
dusk-bytes = { version = "0.1", default-features = false }
dusk-bls12_381 = { git = "https://github.com/dash2507/bls12_381", branch = "use-v4-dev", default-features = false }
dusk-jubjub = { git = "https://github.com/dash2507/jubjub", branch = "fix-tests", default-features = false }
itertools = { version = "0.9", default-features = false }
hashbrown = { version = "0.9", default-features = false, features = ["ahash"] }
# Dusk related deps for WASMI serde
canonical = { version = "0.6", default-features = false, optional = true }
canonical_derive = { version = "0.6", default-features = false, optional = true }
# Parity support
parity-scale-codec = { version = "3.0", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19" }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"
rand_xorshift = { git = "https://github.com/AstarNetwork/rngs", branch = "master", default-features = false, package = "rand_xorshift" }
rand = { version = "0.8", default-features = false }

[[bench]]
name = "plonk"
harness = false

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
